fix: fix autocomplete demo bug and bump menu z-index

--- a/packages/ui/src/theme/css/component/autocomplete.scss
+++ b/packages/ui/src/theme/css/component/autocomplete.scss
@@ -13,7 +13,7 @@
 
 .amplify-autocomplete__menu {
   position: absolute;
-  z-index: 99;
+  z-index: 999999;
 
   width: var(--amplify-components-autocomplete-menu-width);
   margin-block-start: var(
